fix: wrapper height overflow

--- a/apps/docs/src/components/Layout.css
+++ b/apps/docs/src/components/Layout.css
@@ -216,6 +216,8 @@
 .content--template-preview {
   padding: 16px;
   box-sizing: border-box;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .content--template-preview > * {
